--- a/src/style.scss
+++ b/src/style.scss
@@ -10,3 +10,9 @@ $fontSize: 52px;
 .active {
     color: red;
 }
+
+// element footer
+.footer {
+  padding: 20px 0 0;
+  border-top: 1px solid #eee;
+}
