* css 리로드 버그 수정 * css 파일 분리

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,10 +1,14 @@
-$fontColor: blue;
-$fontSize: 52px;
+// BEM
+.header {
+  border-bottom: 1px solid #000;
+  padding: 10px;
+  background: $keyColor;
+  color: #fff;
+}
 
 .title {
-  color: $fontColor;
+  color: $fontColorBase;
   font-size: $fontSize;
-  text-align: center;
 }
 
 .active {
