--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -3,7 +3,9 @@
   border-bottom: 1px solid #000;
   padding: 10px;
   background: $keyColor;
-  color: #fff;
+  a {
+    color: #fff;
+  }
 }
 
 .title {
