--- a/src/css/component.scss
+++ b/src/css/component.scss
@@ -1,13 +1,38 @@
-body {
-  font-family: sans-serif;
+// BEM
+.header {
+  border-bottom: 1px solid #000;
+  padding: 10px;
+  background: $keyColor;
+  a {
+    color: #fff;
+  }
+}
+
+.header--nav {
+  display: inline-block;
+  margin-left: 20px;
+  vertical-align: middle;
+}
+
+.title {
+  color: $fontColorBase;
+  font-size: $fontSize;
+}
+
+.active {
+    color: red;
+}
+
+// element footer
+.footer {
+  padding: 20px 0 0;
+  border-top: 1px solid $fontColorBase;
+  text-align: center;
   color: $fontColorBase;
 }
 
-a {
-  color: $fontColorBase;
-  text-decoration: none;
-
-  &:hover {
-    text-decoration: underline;
-  }
+.container-main {
+  padding: 10px;
+  min-height: 200px;
+  text-align: center;
 }
