--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -1,24 +1,13 @@
-// BEM
-.header {
-  border-bottom: 1px solid #000;
-  padding: 10px;
-  background: $keyColor;
-  a {
-    color: #fff;
-  }
-}
-
-.title {
+body {
+  font-family: sans-serif;
   color: $fontColorBase;
-  font-size: $fontSize;
 }
 
-.active {
-    color: red;
-}
+a {
+  color: $fontColorBase;
+  text-decoration: none;
 
-// element footer
-.footer {
-  padding: 20px 0 0;
-  border-top: 1px solid #eee;
+  &:hover {
+    text-decoration: underline;
+  }
 }
